# JustForFun

./: .gitignore  CMakeLists.txt  Makefile
cmake/: AddSpdlog.cmake  CompilerVersionCheck.cmake  Logging.cmake  config.h.in
cmake/template/: config.h.in
include/: config.h
include/matrix_unroll/: matrix_unroll.h
include/my_print/: my_print.h
include/rustlike/: result.h  type.h
include/timer/: timer.h
include/type/: ctype_define.h  get_typename.h  macro.h  marco.h
scripts/: build.sh  clean.sh  run.sh
src/: CMakeLists.txt
src/constexpr-try-except/: constexpr-try-except.cc
src/coroutine/: coroutine.cc
src/expected/: expected.cc
src/lock_or_not/: lock_or_not.cc
src/matrix_unroll/: matrix_unroll.cc
src/no_very_meaning/: no_very_meaning.cc
src/pipe_operator/: pipe_operator.cc
src/smart_point/: smart_point.cc
src/type/: type.cc
